@@ -4,10 +4,17 @@ lazy val root = (project in file("."))
     name := "register-country-by-country-performance-tests",
     version := "0.1.0-SNAPSHOT",
     scalaVersion := "3.3.6",
-    //implicitConversions & postfixOps are Gatling recommended -language settings
+    // implicitConversions & postfixOps are Gatling recommended -language settings
     scalacOptions ++= Seq("-feature", "-language:implicitConversions", "-language:postfixOps"),
     // Enabling sbt-auto-build plugin provides DefaultBuildSettings with default `testOptions` from `sbt-settings` plugin.
     // These testOptions are not compatible with `sbt gatling:test`. So we have to override testOptions here.
     Test / testOptions := Seq.empty,
-    libraryDependencies ++= Dependencies.test
+    libraryDependencies ++= Dependencies.test,
+
+    Gatling / javaOptions ++= Seq(
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED"
+    ),
+    scalafixConfigSettings(Gatling),
+    semanticdbEnabled := true
   )
